<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WallpaperSwitcher</string>
    <string name="up_one_level">…</string>
    <string name="none"> </string>
    <string name="selectcurdir">Select</string>
    <string name="have_a_try">Swipe Left or Right</string>
    <string name="please_select">Select Directory</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Shortcuts -->
    <string name="shortcut_disabled">Disabled</string>
    <string name="shortcut_settings">Settings</string>
    <string name="shortcut_switch">Switch Wallpaper</string>
    <string name="shortcut_share">Share Wallpaper</string>
    <string name="shortcut_open_current">Open Current Wallpaper</string>
    <string name="shortcut_open_current_da3dsoul">Open Current Wallpaper on da3dsoul.dev</string>
    <string name="shortcut_open_current_pixiv">Open Current Wallpaper on Pixiv</string>
    <string name="shortcut_open_previous">Open Previous Wallpaper</string>
    <string name="shortcut_view_history">View History</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="debug_stats">Debug Stats</string>
    <string name="txtBucketSize">Bucket Size</string>
    <string name="txtMinAspect">Min Aspect</string>
    <string name="txtMaxAspect">Max Aspect</string>
    <string name="save">Save</string>
    <string name="add">+</string>
    <string name="txtReadAhead">Read Ahead</string>
    <string name="no_results">No Wallpaper Found</string>
    <string name="image">Image</string>
    <string name="delete">Delete</string>
</resources>
