<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_directory">

    <TextView
        android:id="@+id/lblMinAspect"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/txtMinAspect"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <NumberPicker
        android:id="@+id/txtMinAspect"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/lblMaxAspect"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/txtMaxAspect"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <NumberPicker
        android:id="@+id/txtMaxAspect"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/lblDirectory"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/select_folder_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>