<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings">

    <CheckBox
        android:id="@+id/debug_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/debug_stats" />

    <TextView
        android:id="@+id/lblBucketSize"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/txtBucketSize"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <NumberPicker
        android:id="@+id/txtBucketSize"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/lblReadAhead"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/txtReadAhead"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <NumberPicker
        android:id="@+id/txtReadAhead"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:minHeight="48dp" />


    <androidx.recyclerview.widget.RecyclerView android:id="@+id/folders"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/directory_list_item"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />
</LinearLayout>